# TermSupervisor

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
docs/: README.md  content-heuristic.md  hook-manager-refactor.md  pane-state-optimization.md  state-architecture.md  tmux-implementation-plan.md
src/termsupervisor/: __init__.py  config.py  demo.py  models.py  server.py  supervisor.py  telemetry.py  timer.py
src/termsupervisor/adapters/: __init__.py  base.py  composite.py  factory.py
src/termsupervisor/adapters/iterm2/: __init__.py  adapter.py  client.py  layout.py  models.py  naming.py
src/termsupervisor/adapters/tmux/: __init__.py  adapter.py  client.py  layout.py
src/termsupervisor/analysis/: __init__.py  base.py  change_queue.py  cleaner.py  content_cleaner.py  content_heuristic.py  heuristic.py  hook.py  llm.py  rule_based.py
src/termsupervisor/core/: __init__.py  ids.py
src/termsupervisor/hooks/: __init__.py  event_processor.py  manager.py  prompt_monitor.py  receiver.py  state.py  state_machine.py  state_store.py
src/termsupervisor/hooks/sources/: __init__.py  base.py  claude_code.py  claude_code_settings.example.json  iterm.py  shell.py  tmux.py
src/termsupervisor/iterm/: __init__.py  client.py  layout.py  models.py  naming.py  utils.py
src/termsupervisor/pane/: __init__.py  manager.py  pane.py  persistence.py  predicates.py  queue.py  state_machine.py  transitions.py  types.py
src/termsupervisor/render/: __init__.py  cache.py  detector.py  pipeline.py  poller.py  renderer.py  types.py
src/termsupervisor/runtime/: __init__.py  bootstrap.py
src/termsupervisor/state/: __init__.py  manager.py  predicates.py  queue.py  state_machine.py  transitions.py  types.py
src/termsupervisor/templates/: index.html
src/termsupervisor/web/: __init__.py  app.py  handlers.py  server.py
tests/: conftest.py  test_content_cleaner.py  test_heuristics.py  test_hook_manager.py  test_main.py  test_pane.py  test_pane_state_machine.py  test_state_machine.py  test_state_manager.py  test_timer.py
tests/adapters/: test_base.py  test_composite.py  test_factory.py  test_iterm2.py
tests/adapters/tmux/: __init__.py  test_adapter.py  test_client.py  test_layout.py
tests/analysis/: __init__.py  test_content_heuristic.py  test_heuristic.py
tests/core/: test_ids.py
tests/hooks/sources/: test_tmux.py
tests/render/: __init__.py  test_cache.py  test_detector.py  test_pipeline.py  test_poller.py  test_types.py
