[project]
name = "termsupervisor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.122.0",
    "iterm2>=2.12",
    "jinja2>=3.1.6",
    "uvicorn>=0.38.0",
]

[project.scripts]
termsupervisor-demo = "termsupervisor.demo:main"
termsupervisor = "termsupervisor.supervisor:main"
termsupervisor-web = "termsupervisor.server:main"

[build-system]
requires = ["uv_build>=0.9.12,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
