[project]
name = "termsupervisor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cairosvg>=2.8.2",
    "fastapi>=0.122.0",
    "fonttools>=4.61.0",
    "httpx>=0.28.0",
    "iterm2>=2.12",
    "jinja2>=3.1.6",
    "pillow>=12.0.0",
    "rich>=14.2.0",
    "uvicorn>=0.38.0",
    "wcwidth>=0.2.14",
]

[project.scripts]
termsupervisor = "termsupervisor.web.app:main"

[build-system]
requires = ["uv_build>=0.9.12,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

