[project]
name = "termsupervisor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cairosvg>=2.8.2",
    "fastapi>=0.122.0",
    "fonttools>=4.61.0",
    "httpx>=0.28.0",
    "iterm2>=2.12",
    "jinja2>=3.1.6",
    "pillow>=12.0.0",
    "rich>=14.2.0",
    "uvicorn>=0.38.0",
    "wcwidth>=0.2.14",
]

[project.scripts]
termsupervisor = "termsupervisor.web.app:main"

[build-system]
requires = ["uv_build>=0.9.12,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "SIM108", # ternary instead of if-else
    "SIM102", # nested if (sometimes clearer)
    "SIM103", # direct return (sometimes clearer)
    "SIM105", # contextlib.suppress (explicit try-except often clearer)
    "SIM110", # use any() (explicit loop sometimes clearer)
    "SIM117", # multiple with (sometimes clearer)
    "B007",   # loop var unused (intentional pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["termsupervisor"]

[tool.mypy]
python_version = "3.12"
strict = false
# Balanced settings - type check but allow gradual adoption
warn_return_any = false  # Too noisy with external libs
warn_unused_ignores = false
disallow_untyped_defs = false  # Gradual typing
disallow_incomplete_defs = false  # Gradual typing
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
files = ["src/termsupervisor"]
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = [
    "iterm2.*",
    "cairosvg.*",
    "fontTools.*",
    "wcwidth.*",
]
ignore_missing_imports = true

